--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ nav ul li a:hover::after{
 }
 
 .about-col-1{
-    flex-basis: 38%;
+    flex-basis: 42%;
 
 }
 .about-col-1 img{
@@ -94,17 +94,51 @@ nav ul li a:hover::after{
 }
 
 .about-col-2{
-    flex-basis: 58%;
+    flex-basis: 55%;
 }
 .sub-tittle{
+    margin-top: -10px;
+    margin-bottom: 10px;
     font-size: 60px;
-    font-weight: 600;
+    font-weight: 700;
     color: rgb(32, 66, 94);
 }
 
+.rata{
+    text-align: justify;
+    line-height: 150%;
+}
+hr {
+    margin-top: 10px;
+    margin-bottom: 25px;
+    border: none;
+    height: 1.5px;
+    color: #000000; 
+    background-color: #000000;
+}
 .tab-tittles{
-    display: flex;
-    margin: 20px 0 40px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(160px,1fr));
+    grid-gap: 20px;
+    margin-top: 10px;
+    margin-left: 50px;
+}
+
+.tab-tittles p{
+    background: rgb(41, 156, 251);
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    color: #fcfcfc;
+    font-weight: 300;
+    border-right: 10px;
+    transition: background 0.2s, transform 0.5s;
+    border-radius: 10px;
+}
+
+.tab-tittles p:hover{
+    background: #8d0505;
+    transform: translateY(-5px);
 }
 
 .tab-links{
@@ -127,11 +161,12 @@ nav ul li a:hover::after{
 }
 
 .tab-links.active-link::after{
-    width: 50%;
+    width: 100%;
+    height: 1.5px;
 }
 .tab-contents ul li{
     list-style: none;
-    margin: 10px 0;
+    margin: 15px 0;
 }
 .tab-contents ul li span{
     color: rgb(5, 96, 171);
@@ -139,7 +174,6 @@ nav ul li a:hover::after{
 }
 .tab-contents{
     display: none;
-
 }
 
 .tab-contents.active-tab{
@@ -147,44 +181,50 @@ nav ul li a:hover::after{
 }
 /*-------------------services----------*/
 .services{
-    padding: 30px 0;
+    padding: 10px 0;
 
 }
 
 .services-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(160px,1fr));
+    grid-gap: 30px;
+    margin-top: 30px;
 }
 
 .services-list div{
-    background: rgb(28, 129, 211);
-    padding: 40px;
-    font-size: 13px;
-    font-weight: 300;
+    background: rgb(62, 161, 242);
+    padding: 30px;
+    font-size: 20px;
+    font-weight: 200;
     border-right: 10px;
     transition: background 0.5s, transform 0.5s;
-    border-radius: 20px;
+    border-radius: 25px;
 }
 .services-list div i{
-    font-size: 50px;
-    margin-bottom: 30px;
-
+    font-size: 40px;
+    margin-bottom: 10px;
 }
 
 .services-list div h2{
+    text-align: center;
+    color: #ffffff;
     font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 15px;
+    font-weight: 400;
+    margin-bottom: 20px;
 }
 
 .services-list div a{
     text-decoration: none;
     color: #ffffff;
-    font-size: 12px;
+    font-size: 20px;
     margin-top: 20px;
+    margin-left: 35%;
     display: inline-block;
+}
+
+.services-list div,h2:hover{
+    color: #000000;
 }
 .services-list div:hover{
     background: #8d0505;
