--- a/style.css
+++ b/style.css
@@ -1,451 +1,446 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-body{
-    background: #ffffff;
-    color: #000000;
+body {
+  background: #ffffff;
+  color: #000000;
 }
-#header{
-    width: 100%;
-    height: 100vh;
-    background-image: url(images/Gussing.png);
-    background-size: cover;
-    background-position: center;
-}
-
-.container{
-    padding: 10px 10%;
-}  
-
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+#header {
+  width: 100%;
+  height: 100vh;
+  background-image: url(images/Gussing.png);
+  background-size: cover;
+  background-position: center;
 }
 
-.logo{
-    width: 140px;
+.container {
+  padding: 10px 10%;
 }
 
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px;
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-nav ul li a{
-    color:  #000000;
-    text-decoration:none;
-    font-size: 18px;
-    position: relative;
-}
-nav ul li a::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: rgb(41, 156, 251);
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.3s;
+.logo {
+  width: 140px;
 }
 
-nav ul li a:hover::after{
-    width: 100%;
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 10px;
 }
 
-.header-text{
-    margin-top: 20%;
-    font-size: 30px;
+nav ul li a {
+  color: #000000;
+  text-decoration: none;
+  font-size: 18px;
+  position: relative;
 }
-.header-text h1{
-    font-size: 60px;
-    margin-top: 20px;
-}
-
-.header-text h1 span{
-    color: rgb(41, 156, 251);
-}
-<!-----------about--------------->
-#about{
-    padding: 80px 0;
-    color: #a2a2a2;
-}
-.row{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+nav ul li a::after {
+  content: "";
+  width: 0;
+  height: 3px;
+  background: rgb(41, 156, 251);
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.3s;
 }
 
-.about-col-1{
-    flex-basis: 42%;
-
-}
-.about-col-1 img{
-    width : 100%;
-    border-radius: 20px;
+nav ul li a:hover::after {
+  width: 100%;
 }
 
-.about-col-2{
-    flex-basis: 55%;
+.header-text {
+  margin-top: 20%;
+  font-size: 30px;
 }
-.sub-tittle{
-    margin-top: -10px;
-    margin-bottom: 10px;
-    font-size: 60px;
-    font-weight: 700;
-    color: rgb(32, 66, 94);
+.header-text h1 {
+  font-size: 60px;
+  margin-top: 20px;
 }
 
-.rata{
-    text-align: justify;
-    line-height: 150%;
+.header-text h1 span {
+  color: rgb(41, 156, 251);
+}
+<!-----------about--------------- > #about {
+  padding: 80px 0;
+  color: #a2a2a2;
+}
+.row {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.about-col-1 {
+  flex-basis: 42%;
+}
+.about-col-1 img {
+  width: 100%;
+  border-radius: 20px;
+}
+
+.about-col-2 {
+  flex-basis: 55%;
+}
+.sub-tittle {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  font-size: 60px;
+  font-weight: 700;
+  color: rgb(32, 66, 94);
+}
+
+.rata {
+  text-align: justify;
+  line-height: 150%;
 }
 hr {
-    margin-top: 10px;
-    margin-bottom: 25px;
-    border: none;
-    height: 1.5px;
-    color: #000000; 
-    background-color: #000000;
+  margin-top: 10px;
+  margin-bottom: 25px;
+  border: none;
+  height: 1.5px;
+  color: #000000;
+  background-color: #000000;
 }
-.tab-tittles{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px,1fr));
-    grid-gap: 20px;
-    margin-top: 10px;
-    margin-left: 50px;
-}
-
-.tab-tittles p{
-    background: rgb(41, 156, 251);
-    padding: 10px;
-    font-size: 20px;
-    text-align: center;
-    color: #fcfcfc;
-    font-weight: 300;
-    border-right: 10px;
-    transition: background 0.2s, transform 0.5s;
-    border-radius: 10px;
+.tab-tittles {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  grid-gap: 20px;
+  margin-top: 10px;
+  margin-left: 50px;
 }
 
-.tab-tittles p:hover{
-    background: #8d0505;
-    transform: translateY(-5px);
+.tab-tittles p {
+  background: rgb(41, 156, 251);
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+  color: #fcfcfc;
+  font-weight: 300;
+  border-right: 10px;
+  transition: background 0.2s, transform 0.5s;
+  border-radius: 10px;
 }
 
-.tab-links{
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
+.tab-tittles p:hover {
+  background: #8d0505;
+  transform: translateY(-5px);
 }
 
-.tab-links::after{
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #000000;
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: 0.3s;
+.tab-links {
+  margin-right: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
 }
 
-.tab-links.active-link::after{
-    width: 100%;
-    height: 1.5px;
-}
-.tab-contents ul li{
-    list-style: none;
-    margin: 15px 0;
-}
-.tab-contents ul li span{
-    color: rgb(5, 96, 171);
-    font-size: 14px;
-}
-.tab-contents{
-    display: none;
+.tab-links::after {
+  content: "";
+  width: 0;
+  height: 3px;
+  background: #000000;
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  transition: 0.3s;
 }
 
-.tab-contents.active-tab{
-    display: block;
+.tab-links.active-link::after {
+  width: 100%;
+  height: 1.5px;
+}
+.tab-contents ul li {
+  list-style: none;
+  margin: 15px 0;
+}
+.tab-contents ul li span {
+  color: rgb(5, 96, 171);
+  font-size: 14px;
+}
+.tab-contents {
+  display: none;
+}
+
+.tab-contents.active-tab {
+  display: block;
 }
 /*-------------------services----------*/
-.services{
-    padding: 10px 0;
-
+.services {
+  padding: 10px 0;
 }
 
-.services-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px,1fr));
-    grid-gap: 30px;
-    margin-top: 30px;
+.services-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  grid-gap: 30px;
+  margin-top: 30px;
 }
 
-.services-list div{
-    background: rgb(62, 161, 242);
-    padding: 30px;
-    font-size: 20px;
-    font-weight: 200;
-    border-right: 10px;
-    transition: background 0.5s, transform 0.5s;
-    border-radius: 25px;
+.services-list div {
+  background: rgb(62, 161, 242);
+  padding: 30px;
+  font-size: 20px;
+  font-weight: 200;
+  border-right: 10px;
+  transition: background 0.5s, transform 0.5s;
+  border-radius: 25px;
 }
-.services-list div i{
-    font-size: 40px;
-    margin-bottom: 10px;
-}
-
-.services-list div h2{
-    text-align: center;
-    color: #ffffff;
-    font-size: 30px;
-    font-weight: 400;
-    margin-bottom: 20px;
+.services-list div i {
+  font-size: 40px;
+  margin-bottom: 10px;
 }
 
-.services-list div a{
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 20px;
-    margin-top: 20px;
-    margin-left: 35%;
-    display: inline-block;
+.services-list div h2 {
+  text-align: center;
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 400;
+  margin-bottom: 20px;
 }
 
-.services-list div,h2:hover{
-    color: #000000;
-}
-.services-list div:hover{
-    background: #8d0505;
-    transform: translateY(-15px);
-}
-<!-------portofolio--------------->
-
-#portofolio{
-    padding: 50px 0;
-}
-.work-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
-    grid-gap: 40px;
-    margin-top: 50px;
-
-}
-.work{
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
+.services-list div a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-left: 35%;
+  display: inline-block;
 }
 
-.work img{
-    width: 100%;
-    border-radius: 10px;
-    display: block;
-    transition: transform 0.5s;
+.services-list div,
+h2:hover {
+  color: #000000;
+}
+.services-list div:hover {
+  background: #8d0505;
+  transform: translateY(-15px);
+}
+<!-------portofolio--------------- > #portofolio {
+  padding: 50px 0;
+}
+.work-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
+}
+.work {
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
 }
 
-.layer{
-    width: 100%;
-    height: 0%;
-    background: linear-gradient(rgba(255, 255, 255, 0.5), rgb(0, 115, 255));
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    font-size: 14px;
-    transition: height 0.5s;
-}
-.layer h3{
-    font-weight: 500;
-    margin-bottom: 20px;
+.work img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
 }
 
-.layer a{
-    margin-top: 20px;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    font-size: 18px;
-    line-height: 30px;
-    background: rgb(0, 0, 0);
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    text-align: center;
-
+.layer {
+  width: 100%;
+  height: 0%;
+  background: linear-gradient(rgba(255, 255, 255, 0.5), rgb(0, 60, 134));
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
 }
-.work:hover img{
-    transform: scale(1.1);
-}
-.work:hover .layer{
-    height: 100%;
-}
-.btn{
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid rgb(92, 165, 255);
-    padding: 14px 50px;
-    border-radius: 6px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #000000;
-    background: #ffffff;
+.layer h3 {
+  font-weight: 500;
+  margin-bottom: 20px;
 }
 
-.btn:hover{
-    background: rgb(92, 165, 255);
+.layer a {
+  margin-top: 20px;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 30px;
+  background: rgb(0, 0, 0);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  text-align: center;
+}
+.work:hover img {
+  transform: scale(1.1);
+}
+.work:hover .layer {
+  height: 100%;
+}
+.btn {
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid rgb(92, 165, 255);
+  padding: 14px 50px;
+  border-radius: 6px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: #000000;
+  background: #ffffff;
 }
 
-<!-----------contact------------>
-.contact-left{
-    flex-basis: 35%;
-}
-.contact-right{
-    flex-basis: 65%;
-}
-.contact-left p{
-    margin-top: 25px;
-}
-.contact-left p i{
-    color: #ffffff;
-    margin-right: 15px;
-    font-size: 30px;
-}
-.social-icons{
-    margin-top: 30px;
-}
-.social-icons a{
-    text-decoration: none;
-    font-size: 30px;
-    margin-right: 15px;
-    display: inline-block;
-    transition: transform 0.3s;
+.btn:hover {
+  background: rgb(92, 165, 255);
 }
 
-.social-icons a:hover{
-    transform: translateY(-10px);
+<!-----------contact------------ > .contact-left {
+  flex-basis: 35%;
 }
-.btn.btn2{
-    display: inline-block;
+.contact-right {
+  flex-basis: 65%;
+}
+.contact-left p {
+  margin-top: 25px;
+}
+.contact-left p i {
+  color: #ffffff;
+  margin-right: 15px;
+  font-size: 30px;
+}
+.social-icons {
+  margin-top: 30px;
+}
+.social-icons a {
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  display: inline-block;
+  transition: transform 0.3s;
 }
 
-.contact-right form{
-    width: 100%;
+.social-icons a:hover {
+  transform: translateY(-10px);
 }
-form input, form textarea{
-    width: 100%;
-    border: 1px solid rgb(92, 165, 255);
-    outline: none;
-    background: #fcfcfc;
-    padding: 15px;
-    margin: 15px 0;
-    color: #790505;
-    font-size: 15px;
-    border-radius: 10px;
+.btn.btn2 {
+  display: inline-block;
+}
 
+.contact-right form {
+  width: 100%;
 }
-form .btn2{
-    padding: 14px 60px;
-    font-size: 18px;
-    margin-top: 20px;
-    cursor: pointer;
+form input,
+form textarea {
+  width: 100%;
+  border: 1px solid rgb(92, 165, 255);
+  outline: none;
+  background: #fcfcfc;
+  padding: 15px;
+  margin: 15px 0;
+  color: #790505;
+  font-size: 15px;
+  border-radius: 10px;
 }
-.copyright{
-    width: 100%;
-    text-align: center;
-    color: #fcfcfc;
-    padding: 25px 0;
-    background: #8d0505;
-    font-weight: 300;
-    margin-top: 25px;
-
+form .btn2 {
+  padding: 14px 60px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.copyright {
+  width: 100%;
+  text-align: center;
+  color: #fcfcfc;
+  padding: 25px 0;
+  background: #8d0505;
+  font-weight: 300;
+  margin-top: 25px;
 }
 
 /*screen hp*/
-nav .fa-solid{
-    display: none;
+
+nav .fa-solid {
+  display: none;
 }
 
-@media only screen and (max-width: 600px){
-    #header{
-        background-image: url(images/Gussingpotrait.png);
-    }
-    .header-text{
-        margin-top: 100%;
-        font-size: 16px;
-    }
-    .header-text h1{
-        font-size: 30px;
-    }
-    nav .fa-solid{
-        display: block;
-        font-size: 25px;
-    }
-    nav ul{
-        background:rgb(69, 160, 246);
-        position: fixed;
-        right: -160px;
-        top: 0;
-        width: 160px;
-        height: 100vh;
-        padding-top: 50px;
-        z-index: 2;
-        transition: right 0.8s;
-    }
-    nav ul li{
-        display: block;
-        margin: 25px;
-    }
-    nav ul .fa-solid{
-        position: absolute;
-        top: 25px;
-        left: 25px;
-        cursor: pointer;
-    }
-    .sub-tittle{
-        font-size: 40px;
-    }
-    .about-col-1, .about-col-2{
-        flex-basis: 100%;
-    }
-    .about-col-1{
-        margin-bottom: 30px;
-    }
-    .about-col-2{
-        font-size: 14px;
-    }
-    .tab-links{
-        font-size: 16px;
-        margin-right: 20px;
-    }
-    .contact-left, .contact-right{
-        flex-basis: 100%;
-    }
-    .copyright{
-        font-size: 14px;
-    }
-}
-
-#msg{
-    color: #790505;
-    margin-top: -40px;
+@media only screen and (max-width: 600px) {
+  #header {
+    background-image: url(images/Gussingpotrait.png);
+  }
+  .header-text {
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .header-text h1 {
+    font-size: 30px;
+  }
+  nav .fa-solid {
     display: block;
+    font-size: 25px;
+  }
+  nav ul {
+    background: rgb(69, 160, 246);
+    position: fixed;
+    right: -160px;
+    top: 0;
+    width: 160px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.8s;
+  }
+  nav ul li {
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fa-solid {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+  .sub-tittle {
+    font-size: 40px;
+  }
+  .about-col-1,
+  .about-col-2 {
+    flex-basis: 100%;
+  }
+  .about-col-1 {
+    margin-bottom: 30px;
+  }
+  .about-col-2 {
+    font-size: 14px;
+  }
+  .tab-links {
+    font-size: 16px;
+    margin-right: 20px;
+  }
+  .contact-left,
+  .contact-right {
+    flex-basis: 100%;
+  }
+  .copyright {
+    font-size: 14px;
+  }
+}
+
+#msg {
+  color: #790505;
+  margin-top: -40px;
+  display: block;
 }
